--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
     </div>
     <div class="about">
-      <h3>About Me</h3>I'm a web designer for Fiserv, specializing in web design, graphic design, and UX. Experienced with the Adobe Creative Suite, responsive design, social media management, and prototyping.
+      <h3>About Me</h3>Technical sound application engineer effective in analyzing relevant information and guiding product cycle from conception to completion. Well-versed in numerous programming languages including HTML5, CSS, Bootstrap, JavaScript ES6, ReactJS, APIs, Node, and Sql. Strong background in project management and customer relations. And have worked in GitHub, Netlify, and other useful tools used for programing.
     </div>
     <div class="contact">
       <h3 style="margin-top: 50px;">Contact Me</h3>
@@ -56,17 +56,17 @@
     <div class="work">
       <h3><i class="fa fa-briefcase"></i>Experience</h3>
       <ul>
-        <li><span>Technical Consultant -<br>Web Design</span><small>Fiserv</small><small>Apr 2018 - Now</small></li>
-        <li><span>Web Designer</span><small>Lynden</small><small>Jan 2018 - Apr 2018</small></li>
-        <li><span>Intern - Web Design</span><small>Lynden</small><small>Aug 2017 - Dec 2017</small></li>
+        <li><span>Software Support Engineer<br>Vaival Technologies LLC</span><small>Jan-2022 - Now</small></li>
+        <li><span>IT Officer</span><br>Business Go Digital<small>Feb-2021 - Dec-2021</small></li>
+        <li><span>Data Entry Operator / Computer Operator<br>Nimmul Enterprises</span><small>June-2020 - Jan-2021</small></li>
       </ul>
     </div>
     <div class="edu">
       <h3><i class="fa fa-graduation-cap"></i>Education</h3>
       <ul>
-        <li><span>Bachelor of Science<br>Web Design and Development</span><small>BYU-Idaho</small><small>Jan. 2016 - Apr. 2018</small></li>
-        <li><span>Computer Science</span><small>Edmonds Community College</small><small>Sept. 2014 - Dec. 2015</small></li>
-        <li><span>High School</span><small>Henry M. Jackson High School</small><small>Jan. 2013 - Jun. 2015</small></li>
+        <li><span>BS Software Engineering</span><small>Government College University<br> Faisalabad</small><small>2013-2017</small></li>
+        <li><span>FSC Pre Engineering</span><small>Punjab College<br>Okara</small><small>2011-2013</small></li>
+        <li><span>Matriculation</span><small>Federal Government Public High School<br>Okara Cantt</small><small>2011</small></li>
       </ul>
     </div>
     <div class="skills-prog">
@@ -77,7 +77,7 @@
             <div class="bar"></div>
           </div>
         </li>
-        <li data-percent="90"><span>CSS3 & SCSS</span>
+        <li data-percent="90"><span>CSS3</span>
           <div class="skills-bar">
             <div class="bar"></div>
           </div>
@@ -97,12 +97,12 @@
             <div class="bar"></div>
           </div>
         </li>
-        <li data-percent="55"><span>PHP</span>
+        <li data-percent="55"><span>React JS</span>
           <div class="skills-bar">
             <div class="bar"></div>
           </div>
         </li>
-        <li data-percent="40"><span>MySQL</span>
+        <li data-percent="40"><span>Oracle</span>
           <div class="skills-bar">
             <div class="bar"></div>
           </div>
@@ -116,7 +116,7 @@
           <svg viewbox="0 0 100 100">
             <circle cx="50" cy="50" r="45"></circle>
             <circle class="cbar" cx="50" cy="50" r="45"></circle>
-          </svg><span>Illustrator</span><small></small>
+          </svg><span>GitHub</span><small></small>
         </li>
         <li data-percent="75">
           <svg viewbox="0 0 100 100">
@@ -128,13 +128,13 @@
           <svg viewbox="0 0 100 100">
             <circle cx="50" cy="50" r="45"></circle>
             <circle class="cbar" cx="50" cy="50" r="45"></circle>
-          </svg><span>InDesign</span><small></small>
+          </svg><span>Visual Studio Code</span><small></small>
         </li>
         <li data-percent="65">
           <svg viewbox="0 0 100 100">
             <circle cx="50" cy="50" r="45"></circle>
             <circle class="cbar" cx="50" cy="50" r="45"></circle>
-          </svg><span>Dreamweaver</span><small></small>
+          </svg><span>Networking</span><small></small>
         </li>
       </ul>
     </div>
